<resources>
    <string name="app_name">Financer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_credentials">Your credentials are invalid. </string>
    <string name="overview">Overview</string>
    <string name="transactions">Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="fixed_transactions">Fixed Transactions</string>
    <string name="enter_credentials">Please enter your Credentials</string>
    <string name="error_field_required">Field is required.</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="product">Product</string>
    <string name="purpose">Purpose</string>
    <string name="shop">Shop</string>
    <string name="value_date">Value Date</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading …</string>
    <string name="refresh">Refresh</string>
    <string name="fixed_expenses">Fixed Expenses</string>
    <string name="variable_expenses">Variable Expenses</string>
    <string name="fixed_revenue">Fixed Revenue</string>
    <string name="variable_revenue">Variable Revenue</string>
    <string name="something_went_wrong">Something went wrong …</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="birth_date">Birth date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_specified">Not specified</string>
    <string name="email_already_in_use">Email is already in use.</string>
    <string name="password_too_short">Password is too short (min 4 characters).</string>
    <string name="error_not_authorized">Your client is not authorized to fetch data from the server. Please try to log in again or contact the support.</string>
    <string name="error_server_unavailable">Server is currently not available. Please try again later.</string>
    <string name="error_database_unavailable">The database is not available at the moment. Please try again later</string>
    <string name="error_something_went_wrong">Oops! Something went wrong. Please try again later.</string>
    <string name="financer_display" translatable="false">F I N A N C E R</string>
    <string name="load_categories" >Load Categories …</string>
    <string name="load_transactions">Load Transactions …</string>
    <string name="load_fixed_transactions">Load Fixed Transactions …</string>
    <string name="success_added_transaction">Added transaction successfully!</string>
    <string name="success_updated_transaction">Updated transaction successfully!</string>
    <string name="transaction">Transaction</string>
    <string name="edit">edit</string>
    <string name="balance">Balance</string>
    <string name="expenses">Expenses</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="attachments">Attachments</string>
    <string name="basic_information">Basic information</string>
    <string name="no_attachments">You haven\'t uploaded any attachments yet.</string>
    <string name="success_storage_permission_granted">The permission to access your storage was successfully granted!</string>
    <string name="error_storage_permission_not_granted">You might consider giving this app access to your storage, or otherwise some featues will not be available.</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_file">Choose file</string>
    <string name="upload_attachment">Upload attachment</string>
    <string name="error_image_capture_permission_not_granted">You might consider giving this app access to your camera, or otherwise some featues will not be available.</string>
    <string name="success_uploaded_attachment">Uploaded attachment successfully!</string>
    <string name="success_deleted_transaction">Deleted transaction successfully!</string>
    <string name="undo">Undo</string>
    <string name="deleted_transaction">Deleted transaction</string>
    <string name="search">Search</string>
</resources>
