<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_list_item_transaction_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tv_list_item_transaction_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="@color/darkGray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center">



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_list_item_transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_list_item_transaction_value_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_date"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>