<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.main.transactions.AddTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10">

            <EditText
                android:id="@+id/et_add_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789.,-"
                android:focusableInTouchMode="true"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_add_transaction_value_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:hint="@string/value_date"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/sp_add_transaction_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10">

            <EditText
                android:id="@+id/et_add_transaction_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/product"
                android:inputType="textCapWords"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10">

            <EditText
                android:id="@+id/et_add_transaction_purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/purpose"
                android:inputType="textCapWords"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10">

            <EditText
                android:id="@+id/et_add_transaction_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/shop"
                android:inputType="textCapWords"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_add_transaction_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>