<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/LoginTheme"
    tools:context=".ui.login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="20dp"
                tools:context=".ui.login.LoginActivity"
                tools:showIn="@layout/activity_login">

                <TextView
                    android:id="@+id/tv_login_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="40dp"
                    android:text="F I N A N C E R"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:text="@string/enter_credentials"
                    android:textColor="@color/lightGray" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    tools:layout_editor_absoluteY="35dp">

                    <EditText
                        android:id="@+id/et_register_email"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    tools:layout_editor_absoluteY="35dp">

                    <EditText
                        android:id="@+id/et_register_name"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:focusableInTouchMode="true"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    tools:layout_editor_absoluteY="35dp">

                    <EditText
                        android:id="@+id/et_register_surname"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:focusableInTouchMode="true"
                        android:hint="@string/surname"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_register_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:hint="@string/birth_date"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColorHint="@color/white"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/gender"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginEnd="15dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:ems="10"
                        tools:layout_editor_absoluteY="35dp">

                        <Spinner
                            android:id="@+id/sp_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:focusableInTouchMode="true"
                            android:popupTheme="@android:style/ThemeOverlay.Material.Dark"
                        android:hint="@string/gender"
                            android:textColor="@color/white" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10">

                    <EditText
                        android:id="@+id/et_register_password"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    tools:layout_editor_absoluteY="35dp">

                    <EditText
                        android:id="@+id/et_register_repeat_password"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:focusableInTouchMode="true"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAFAFAFA"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>