<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/form_margin">

    <LinearLayout
        android:id="@+id/btn_attachment_choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_effect"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_attachment_open_camera"
        app:layout_constraintTop_toBottomOf="@id/divider_upload_attachment">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_attachment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/form_margin"
            android:text="@string/choose_file"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_attachment_open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_effect"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btn_attachment_choose_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_upload_attachment">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/form_margin"
            android:text="@string/take_photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_upload_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_margin"
        android:text="@string/upload_attachment"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_upload_attachment"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/form_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/form_margin"
        android:theme="@style/Divider"
        app:layout_constraintTop_toBottomOf="@id/tv_upload_attachment" />
</android.support.constraint.ConstraintLayout>